burger z-index fix

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -390,7 +390,6 @@ top: 3.1%;
 
    &--active {
       top: 0;
-      z-index: 3;
    }
 
    // .burger-menu__row
